--- a/論PHP常見的漏洞/1.1. WooYun-2014-62047：PHPSHE B2C 重裝。.md
+++ b/論PHP常見的漏洞/1.1. WooYun-2014-62047：PHPSHE B2C 重裝。.md
@@ -8,7 +8,7 @@ date_default_timezone_set('PRC');
 
 header('Content-Type: text/html; charset=utf-8');
 
-//改写不安全的register_global和防sql注入处理
+//改寫不安全的register_global和防sql注入處理
 
 if (@ini_get('register_globals')) {
 
@@ -42,7 +42,7 @@ else {
 
 switch ($_g_step) {
 
-    //#####################@ 配置信息 @#####################//
+    //#####################@ 設置資訊 @#####################//
 
     case 'setting':
 
