--- a/論PHP常見的漏洞/1.4 WooYun-2014-76648：FengCMS 修復不當導致getshell.md
+++ b/論PHP常見的漏洞/1.4 WooYun-2014-76648：FengCMS 修復不當導致getshell.md
@@ -1,4 +1,4 @@
-## WooYun-2014-76648：FengCMS 修復不當導致getshell
+## 1.4 WooYun-2014-76648：FengCMS 修復不當導致getshell
 
 ### 詳細說明
 之前提交過一次跟http://**.**.**.**/bugs/wooyun-2014-067508
