--- a/論PHP常見的漏洞/3. 0x03 注入.md
+++ b/論PHP常見的漏洞/3. 0x03 注入.md
@@ -84,17 +84,29 @@ GPC 對應的就是GET POST COOKIE
 ### 寬字節注入
 
 這個是一個老生常談的問題, 從一開始的數據庫字符集GBK的寬字節注入 到現在也有很久了。
+<br />
 但是並不是字符集為GBK的就能寬字節注入。
+<br />
 總有一些小伙伴說咋我看的cms 字符集是gbk的 但是咋不能寬字節呢?
+<br />
 這是因為數據庫的連接方式不同
+<br />
 Set names gbk 這樣的就能寬字節
+<br />
 但是現在這樣的基本都看不到了。因為基本都是設置了二進制讀取了。
+<br />
 Binary。
+<br />
 這樣的寬字節基本沒了, 卻有了另外一種。
+<br />
 因為轉換字符集造成的寬字節注入
+<br />
 從utf8轉到gbk 或者從gbk轉到 utf8啥的。
+<br />
 例子: WooYun: 74cms 最新版 注入8-9
+<br />
 錦 從UTF8 轉成 GBK之後成了 %e5%5c74cms對GET POST COOKIE …… 都做了addslashes所以' 轉義後為\'->%5C %e5%5c%5c' 兩個\ 則單引號出來
+<br />
 例子2: WooYun: qibocms 下載系統SQL注入一枚（官網可重現）
 
 ---
@@ -102,11 +114,17 @@ Binary。
 ### 解碼導致
 
 因為在全局文件中addslashes
+<br />
 如果我們能找到一些解碼的 例如urldecode base64_decode的
+<br />
 那麼我們先提交encode之後的 那麼就能不被轉義了。
+<br />
 然後decode後 再帶入查詢 造成了注入 無視gpc。
+<br />
 這種的很常見。
+<br />
 例子很多 隨便找一個
+<br />
 例子: WooYun: qibocms B2b 注入一枚 //qibocms 注入
 例子: WooYun: phpdisk V7 sql注入2 //phpdisk 注入
 
@@ -115,28 +133,43 @@ Binary。
 ### 變數覆蓋
 
 常見的變數覆蓋 有啥extract 和 parse_str 函數啥的
+<br />
 當然還有$$
+<br />
 變數覆蓋得結合一些具體的場景了。
+<br />
 例如extract($_POST)啥的 直接從POST數組中取出變數
+<br />
 這樣的還是遇到過幾個 然後覆蓋掉之前的一些變數。
+<br />
 覆蓋的話 一般是覆蓋掉表前綴之類的
+<br />
+```SQl
 Select * from $pre_admin where xxx 像這種的就覆蓋掉$pre
+```
+<br />
 然後直接補全語句然後注入。
+<br />
 例子: WooYun: qibocms分類註入一枚可提升自己為管理
 例子2: WooYun: phpmps 注入一枚
+<br />
 當然 `$ 也挺經常用到的 這個例子很不錯。
 例子3: WooYun: MetInfo最新版(5.2.4)一處SQL盲注漏洞
-
 
 ---
 
 ### 一些replace造成的
 
 一些cms中 總有一些逗比過濾函數
+<br />
 會把'啥的 replace 成空
+<br />
 但是他似乎忘記了自己全局有轉義?
+<br />
 用戶提交一個' 全局轉義成\' 然後這過濾函數又會把 ' replace 成空
+<br />
 那麼就留下了\ 導致可以吃掉一個單引號 是double query的話
+<br />
 
 
 ```SQL
@@ -144,12 +177,19 @@ Select * from c_admin where username='admin\' and email='inject#'
 ```
 
 這樣就可以注入了。
+<br />
 話說之前還遇到過一個廠商。 。之前提交了漏洞 是因為他會把
+<br />
 ' " 都會替換成空 然後提交之後 他就去掉了' 就是不把' 替換成空了。
+<br />
 但是他似乎忘記了 " 也會被轉義。。 那麼提交一個 " 就又剩下了一個轉義符。
+<br />
 例子: WooYun: PHPCMS全版本通殺SQL注入漏洞
+<br />
 當然還有一些replace 是用戶可控的。就是說用戶可以想把啥提交成空就提交成空
+<br />
 例如很久前的cmseasy 和 ecshop的那個注入
+<br />
 例如這段程式碼
 
 ```php
@@ -157,10 +197,15 @@ $order_sn = str_replace($_GET['subject'],'',$_GET['out_trade_no']);
 ```
 
 這裡因為會被轉義 如果提交 ' 就成 \' 這裡可以看到
+<br />
 這裡清成空的 是我們get來的 那我們就想辦法把\ replace掉
+<br />
 但是如果我們GET提交把\ replace 那麼會被轉義 就是replace掉\
+<br />
 但是我們只是 \' 所以不能把\去掉 如果我有\ 還要你清空個毛啊。
+<br />
 這裡我們來理清一下思路。
+<br />
 Addslashes 會對' " \ NULL 轉義
 
 ```php
@@ -178,20 +223,22 @@ NULL => \0
 
 
 因為在很多cms中 基本上都只是對GET POST COOKIE 進行addslashes
+<br />
 而沒有對SERVER進行轉義。
+<br />
 而一些SERVER的變數也是用戶可以控制的。
-例如啥 QUERY_STRING X_FORWARDED_FOR CLIENT_IP HTTP_HOST ACCEPT_LANGUAGE 很多。
-這裡最常見的當然也就是X_FORWARDED_FOR
-這個一般是在ip函數中用到 如果後面沒有進行驗證ip是否合法的話就直接return 這個大部分時候都會導致注入。
-例子1: WooYun: Phpyun注入漏洞二
-這裡說到驗證ip 這里基本都是用的正則來驗證是否合法。
-而一些廠商連正則都寫錯。
-例如在cmseasy中的驗證ip的正則中(%.+)
-導致了後面可以寫任意字符。
-例子2: WooYun: CmsEasy最新版本無限制SQL注射
-最近自己在看douphp 裡面的驗證ip的正則自己也發現了一點小問題。
-不過也就只是小問題而已。
-Douphp中的獲取ip的函數。
+<br />例如啥 QUERY_STRING X_FORWARDED_FOR CLIENT_IP HTTP_HOST ACCEPT_LANGUAGE 很多。
+<br />這裡最常見的當然也就是X_FORWARDED_FOR
+<br />這個一般是在ip函數中用到 如果後面沒有進行驗證ip是否合法的話就直接return 這個大部分時候都會導致注入。
+<br />例子1: WooYun: Phpyun注入漏洞二
+<br />這裡說到驗證ip 這里基本都是用的正則來驗證是否合法。
+<br />而一些廠商連正則都寫錯。
+<br />例如在cmseasy中的驗證ip的正則中(%.+)
+<br />導致了後面可以寫任意字符。
+<br />例子2: WooYun: CmsEasy最新版本無限制SQL注射
+<br />最近自己在看douphp 裡面的驗證ip的正則自己也發現了一點小問題。
+<br />不過也就只是小問題而已。
+<br />Douphp中的獲取ip的函數。
 
 ```php
 function get_ip() {
@@ -228,11 +275,11 @@ return '127.0.0.1';
 preg_match('/^(([1-9]?[0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5]).){3}([1-9]?[0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$/', $ip)
 ```
 
-這裡我們仔細來看看 他這裡是準備匹配小數點 但是他直接寫成了.
-都知道在正則中.表示的是匹配任意字符 除開換行符意外 但是在開啟/s 修正符以後 換行符也會匹配。
-不過他這個.後面沒啥+或者?的 導致也就只能寫一個字符。
-他這裡直接寫成了. 那在這裡我們就能引入單引號了。不過也就一個字符。
-這裡的正確寫法應該是.
+<br />這裡我們仔細來看看 他這裡是準備匹配小數點 但是他直接寫成了.
+<br />都知道在正則中.表示的是匹配任意字符 除開換行符意外 但是在開啟/s 修正符以後 換行符也會匹配。
+<br />不過他這個.後面沒啥+或者?的 導致也就只能寫一個字符。
+<br />他這裡直接寫成了. 那在這裡我們就能引入單引號了。不過也就一個字符。
+<br />這裡的正確寫法應該是.
 
 ---
 
@@ -240,46 +287,46 @@ preg_match('/^(([1-9]?[0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5]).){3}([1-9]?[0-9]|1[0-
 ### FILES注入。
 
 
-也差不多 也是因為全局只對COOKIE GET POST 轉義 遺漏了FILES 且不受gpc。
-FILES 注入一般是因為上傳 會把上傳的名字帶到insert當中入庫。
-然後這里文件的名字是我們可以控制的 所以導致了注入。
-
-而這裡的上傳的名字是我們可以控制的。
-例子: WooYun: qibocms 黃頁系統SQL注入一枚
-還有一些 在入庫的時候才對文件的名字進行了轉義 而在獲取後綴後 在入庫的時候對文件名轉義了卻沒有對後綴轉義也導致了注入
-例子: WooYun: Supesite 前台注入 #2 (Insert)
+<br />也差不多 也是因為全局只對COOKIE GET POST 轉義 遺漏了FILES 且不受gpc。
+<br />FILES 注入一般是因為上傳 會把上傳的名字帶到insert當中入庫。
+<br />然後這里文件的名字是我們可以控制的 所以導致了注入。
+<br />
+<br />而這裡的上傳的名字是我們可以控制的。
+<br />例子: WooYun: qibocms 黃頁系統SQL注入一枚
+<br />還有一些 在入庫的時候才對文件的名字進行了轉義 而在獲取後綴後 在入庫的時候對文件名轉義了卻沒有對後綴轉義也導致了注入
+<br />例子: WooYun: Supesite 前台注入 #2 (Insert)
 
 ---
 
 ### 未初始化造成的漏洞
 
-很久以前php<4.20的時候 為了方便 register_globals 默認都是on。
-而到了後面 register_globals 的弊端也顯現了出來, 所以也在很久以前默認都是off了。
-而到了現在, 很多cms 卻喜歡模仿register_globals 搞起了偽全局機制。
-例如啥qibocms metinfo destoon 啥的啊。
-這樣是方便了不少, 但是如果哪裡遺漏了初始化 那麼就會導致注入了。
-感覺這種的挺好玩的 多找了幾個例子。
-例子: WooYun: qibocms地方門戶系統注入一個問題(demo測試)
-例子: WooYun: qibocms地方門戶系統注入（多處類似,demo測試)
-
-例子: WooYun: 齊博地方門戶系統SQL注入漏洞(無需登錄可批量)
-例子: WooYun: 齊博整站/地方門戶SQL注入漏洞
+<br />很久以前php<4.20的時候 為了方便 register_globals 默認都是on。
+<br />而到了後面 register_globals 的弊端也顯現了出來, 所以也在很久以前默認都是off了。
+<br />而到了現在, 很多cms 卻喜歡模仿register_globals 搞起了偽全局機制。
+<br />例如啥qibocms metinfo destoon 啥的啊。
+<br />這樣是方便了不少, 但是如果哪裡遺漏了初始化 那麼就會導致注入了。
+<br />感覺這種的挺好玩的 多找了幾個例子。
+<br />例子: WooYun: qibocms地方門戶系統注入一個問題(demo測試)
+<br />例子: WooYun: qibocms地方門戶系統注入（多處類似,demo測試)
+<br />
+<br />例子: WooYun: 齊博地方門戶系統SQL注入漏洞(無需登錄可批量)
+<br />例子: WooYun: 齊博整站/地方門戶SQL注入漏洞
 
 ---
 
 ### 陣列中的key。
 
-因為在對全局轉義的時候
-很多cms 都只是判斷gpc 是否開啟
-如果off 就對數組中的value就行addslashes
-卻忘記了對數組中的key進行轉義。
-那麼這樣也導致了一個問題。也就是在Gpc off的時候那麼數組的key沒有被過濾 導致可以引入單引號。 (聽說低版本的php對二維數組中的key就算gpc on 也不會轉義)
-如果哪裡把數組中的key 讀取出來 然後把key帶入到了查詢當中
-那麼也會造成安全問題。
-而且這樣的例子很多。簡直慘不忍睹。例子: WooYun: qibocms V7 整站系統最新版SQL注入一枚 & 另外一處能引入轉義符的地方。 //數組key的注入例子: WooYun: qibocms多個系統繞過補丁繼續注入2
-
-例子: WooYun: qibocms全部開源系統 Getshell
-例子: WooYun: Discuz 5.x 6.x 7.x 前台SQL注入漏洞一枚
+<br />因為在對全局轉義的時候
+<br />很多cms 都只是判斷gpc 是否開啟
+<br />如果off 就對數組中的value就行addslashes
+<br />卻忘記了對數組中的key進行轉義。
+<br />那麼這樣也導致了一個問題。也就是在Gpc off的時候那麼數組的key沒有被過濾 導致可以引入單引號。 (聽說低版本的php對二維數組中的key就算gpc on <br />也不會轉義)
+<br />如果哪裡把數組中的key 讀取出來 然後把key帶入到了查詢當中
+<br />那麼也會造成安全問題。
+<br />而且這樣的例子很多。簡直慘不忍睹。例子: WooYun: qibocms V7 整站系統最新版SQL注入一枚 & 另外一處能引入轉義符的地方。 <br />//數組key的注入例子: WooYun: qibocms多個系統繞過補丁繼續注入2
+<br />
+<br />例子: WooYun: qibocms全部開源系統 Getshell
+<br />例子: WooYun: Discuz 5.x 6.x 7.x 前台SQL注入漏洞一枚
 
 ---
 
@@ -297,65 +344,65 @@ $b=$_GET[b];
 Mysql_query("select * from table where xxx='$a' and xx='$b'")
 ```
 
-如果這裡`$_GET[a]` 提交的是一個數組 且含有一個key為0的那麼$a就是對應的這個key的value
-但是這裡並沒有強制要求為數組。
-那麼我們提交一個字符串 那麼後面的[0] 那麼就是截取的第一個字符
-在全局中 單引號被轉義為\' 截取第一個字符就為了\
-吃掉一個單引號 然後就在$b處寫入inject可以注入了。
-例子: WooYun: qibocms 地方門戶系統 注入#4(demo測試)
-還有map發的那Disucz 7.2的那注入也一樣。
-
+<br />如果這裡`$_GET[a]` 提交的是一個數組 且含有一個key為0的那麼$a就是對應的這個key的value
+<br />但是這裡並沒有強制要求為數組。
+<br />那麼我們提交一個字符串 那麼後面的[0] 那麼就是截取的第一個字符
+<br />在全局中 單引號被轉義為\' 截取第一個字符就為了\
+<br />吃掉一個單引號 然後就在$b處寫入inject可以注入了。
+<br />例子: WooYun: qibocms 地方門戶系統 注入#4(demo測試)
+<br />還有map發的那Disucz 7.2的那注入也一樣。
+<br />
 ---
 
 ### 第三方插件
 
-很常見的一種洞。
-比較常見的uc 和 alipay tenpay chinabank 啥的
-特別是uc 因為默認uc裡面都會striplashes
-Uc的話 一般會遇到的問題是uckey默認的。
-或者是uckey這個常量根本就沒有初始化。
-導致了uckey可控 再導致了Getshell 或者 注入啥的。
-還有tenpay 和 alipay 啥的 一些是因為忘記把過濾的文件包含進來
-且key默認是空的 導致可以通過驗證。
-例子: WooYun: phpmps 注入 (可修改其他用戶密碼,官網成功) // phpmps uc致注入
-例子: WooYun: PHPEMS (在線考試系統) 設計缺陷 Getshell一枚(官網已shell) /phpems uc致getshell
-例子: WooYun: 最土團購注入一枚可直接提升自己為管理 & 無限刷錢。 //最土團購 chinabank致注入
-例子: WooYun: Destoon Sql注入漏洞2（有條件） //destoon tenpay致注入
-例子: WooYun: CSDJCMS程式舞曲最新版Sql 一枚 //csdj tenpay致注入
+<br />很常見的一種洞。
+<br />比較常見的uc 和 alipay tenpay chinabank 啥的
+<br />特別是uc 因為默認uc裡面都會striplashes
+<br />Uc的話 一般會遇到的問題是uckey默認的。
+<br />或者是uckey這個常量根本就沒有初始化。
+<br />導致了uckey可控 再導致了Getshell 或者 注入啥的。
+<br />還有tenpay 和 alipay 啥的 一些是因為忘記把過濾的文件包含進來
+<br />且key默認是空的 導致可以通過驗證。
+<br />例子: WooYun: phpmps 注入 (可修改其他用戶密碼,官網成功) // phpmps uc致注入
+<br />例子: WooYun: PHPEMS (在線考試系統) 設計缺陷 Getshell一枚(官網已shell) /phpems uc致getshell
+<br />例子: WooYun: 最土團購注入一枚可直接提升自己為管理 & 無限刷錢。 //最土團購 chinabank致注入
+<br />例子: WooYun: Destoon Sql注入漏洞2（有條件） //destoon tenpay致注入
+<br />例子: WooYun: CSDJCMS程式舞曲最新版Sql 一枚 //csdj tenpay致注入
 
 ---
 
 
 ### 數字型注入
 
-其實也不只是數字型 只是說一些忘記加單引號的地方都這樣。
-只是一般數字型的都不會加單引號的。
-一般的是
+<br />其實也不只是數字型 只是說一些忘記加單引號的地方都這樣。
+<br />只是一般數字型的都不會加單引號的。
+<br />一般的是
 
 ```php
 $id=$_GET[id];
 Select * from table where id=$id;
 ```
-
-$id 沒被單引號 且 沒有被強制類型轉換 那麼就算addslashes了 由於不需要去閉合單引號 所以也無影響。
-例子: WooYun: qibocms 地方門戶系統 注入#3 (demo測試)
-並不是一些數字型 一些其他的點也有些忘記加單引號 導致了注入。例子: WooYun: Supesite 前台注入 #3 (Delete)
-這裡supesite的注入還涉及到了一個設計缺陷。這裡把
+<br />
+<br />$id 沒被單引號 且 沒有被強制類型轉換 那麼就算addslashes了 由於不需要去閉合單引號 所以也無影響。
+<br />例子: WooYun: qibocms 地方門戶系統 注入#3 (demo測試)
+<br />並不是一些數字型 一些其他的點也有些忘記加單引號 導致了注入。例子: WooYun: Supesite 前台注入 #3 (Delete)
+<br />這裡supesite的注入還涉及到了一個設計缺陷。這裡把
 
 ```php
 $query = $_SGLOBAL['db']->query('SELECT * FROM '.tname('spacetags').' WHERE itemid=\''.$itemid.'\' AND status=\''.$status.'\'')
 ```
 
-$itemid 首先帶入到了查詢當中 是被單引號了的。 。如果查詢出來的有結果 才會帶入到delete中 如果無結果 就不執行delete的語句了。而在數據庫中itemid中 存儲的是int類型 所以他這裡本意是想要用戶只能提交數字型才能查詢出結果。如果不是提交的數字的話 那麼就查詢不出來結果 就不去執行下面的delete語句了。但是由於mysql的類型轉換 因為他這裡儲存的是int類型 所以我們提交4xxxxx 跟我們提交4 是一樣的
+<br />$itemid 首先帶入到了查詢當中 是被單引號了的。 。如果查詢出來的有結果 才會帶入到delete中 如果無結果 就不執行delete的語句了。而在數據庫中itemid中 存儲的是int類型 所以他這裡本意是想要用戶只能提交數字型才能查詢出結果。如果不是提交的數字的話 那麼就查詢不出來結果 就不去執行下面的delete語句了。但是由於mysql的類型轉換 因為他這裡儲存的是int類型 所以我們提交4xxxxx 跟我們提交4 是一樣的
 
 ```php
 $_SGLOBAL['db']->query('DELETE FROM '.tname('spacetags').' WHERE itemid='.$itemid.' AND tagid IN ('.simplode($deletetagidarr).') AND status=\''.$status.'\'');
 ```
 
-然後就執行這個delete語句 然後沒單引號 造成了注入。
-例子: WooYun: phpyun v3.2 (20141226) 兩處注入。
-這個phpyun的注入 主要是因為php是弱類型語言
-一些廠商喜歡這樣寫
+<br />然後就執行這個delete語句 然後沒單引號 造成了注入。
+<br />例子: WooYun: phpyun v3.2 (20141226) 兩處注入。
+<br />這個phpyun的注入 主要是因為php是弱類型語言
+<br />一些廠商喜歡這樣寫
 
 ```php
 If ($a>1){
@@ -376,21 +423,21 @@ Mysql_query(select id from table where id=$a)
 Insert into table (username) values ('a\'');
 ```
 
-這樣入庫後轉義符就會消失那麼就是a' 如果哪裡再把這個查詢出來那麼也就是出庫的是a' 如果再把出庫的再帶入到了查詢啥的那麼就再次成功的引入了單引號導致了注入
-例子: WooYun: phpyun v3.2 (20141226) 兩處注入。例子: WooYun: qibocms 地方門戶系統 二次注入#5(demo測試) 例子: WooYun: 74cms (20140709) 二枚二次注入 例子: WooYun: Hdwiki最新版二次注入一枚
-
-比較是硬傷的是 很多時候數據庫中存儲的長度是有限制的。所以一些也不是太好利用。
+<br />這樣入庫後轉義符就會消失那麼就是a' 如果哪裡再把這個查詢出來那麼也就是出庫的是a' <br />如果再把出庫的再帶入到了查詢啥的那麼就再次成功的引入了單引號導致了注入
+<br />例子: WooYun: phpyun v3.2 (20141226) 兩處注入。例子: WooYun: qibocms 地方門戶系統 二次注入#5(demo測試) 例子: WooYun: 74cms <br />(20140709) 二枚二次注入 例子: WooYun: Hdwiki最新版二次注入一枚
+<br />
+<br />比較是硬傷的是 很多時候數據庫中存儲的長度是有限制的。所以一些也不是太好利用。
 
 ---
 
 ### 查詢當中key可控
 
-不知道也應不應該把這個歸為一類。
-大概是因為一些查詢的時候 直接把`$_POST`啥的 直接帶入到了查詢函數當中
-例如cmseasy的rec_insert的查詢函數中。
-然後foreach key 出來 然後foreach 出來的key 做了查詢中的column
-這種的防止方法一般是 把數據庫中的column查詢出來 然後in_array 判斷一下`$_POST`出來的key 是否在數據庫中的column中 下面兩個例子就是這樣修復的。
-例子: WooYun: 雲人才系統SQL注入，繞過WAF 例子: WooYun: Cmseasy SQL注射漏洞之三
+<br />不知道也應不應該把這個歸為一類。
+<br />大概是因為一些查詢的時候 直接把`$_POST`啥的 直接帶入到了查詢函數當中
+<br />例如cmseasy的rec_insert的查詢函數中。
+<br />然後foreach key 出來 然後foreach 出來的key 做了查詢中的column
+<br />這種的防止方法一般是 把數據庫中的column查詢出來 然後in_array 判斷一下`$_POST`出來的key 是否在數據庫中的column中 <br />下面兩個例子就是這樣修復的。
+<br />例子: WooYun: 雲人才系統SQL注入，繞過WAF 例子: WooYun: Cmseasy SQL注射漏洞之三
 
 
 ---
@@ -407,16 +454,16 @@ Insert into table (username) values ('a\'');
 
 ### 截取字符導致的注入
 
-有些cms 有的時候會限制用戶輸入的長度
-所以只截取一部分
-例如uchome的cutstr($asd,32);
-這樣只允許輸入32個字符 而且uchome裡面的這個也沒有像dz那樣截取字符的後面加...
-那麼如果我們提交一個1111111111111111111111111111111'
-被轉義後成1111111111111111111111111111111\'
-然後截取32個字符 就是1111111111111111111111111111111\
-如果又是double query的話 吃掉一個單引號 然後下一個連著的可控變數又可以注入了。
-結果在uchome中找到了個能引入轉義符的 結果只有一個可控的。
-例子: WooYun: Hdwiki (20141205) 存在7處SQL注入漏洞（含之前處理不當安全的漏洞） //裡面的0x06
+<br />有些cms 有的時候會限制用戶輸入的長度
+<br />所以只截取一部分
+<br />例如uchome的cutstr($asd,32);
+<br />這樣只允許輸入32個字符 而且uchome裡面的這個也沒有像dz那樣截取字符的後面加...
+<br />那麼如果我們提交一個1111111111111111111111111111111'
+<br />被轉義後成1111111111111111111111111111111\'
+<br />然後截取32個字符 就是1111111111111111111111111111111\
+<br />如果又是double query的話 吃掉一個單引號 然後下一個連著的可控變數又可以注入了。
+<br />結果在uchome中找到了個能引入轉義符的 結果只有一個可控的。
+<br />例子: WooYun: Hdwiki (20141205) 存在7處SQL注入漏洞（含之前處理不當安全的漏洞） //裡面的0x06
 
 ---
 
@@ -439,16 +486,17 @@ $_key{0} != '_' && $$_key = daddslashes($_value);
 }
 ```
 
-主要關鍵程式碼就上面這兩段。這裡把GET POST COOKIE 循環出來 然後註冊一個變數 但是 這裡不允許創建GLOBALS變數 然後DZ7.X 就是用這樣處理的 如果設置了REQUEST 的 GLOBALS
-就直接退出
-這段程式碼在很久以前確實是沒什麼問題
-因為那時候的request order 還是gpc
-但是在php 5.3 以後 request order 默認成了gp
-也就是成了get 和 Post 不包含cookie了。
-
-所以 `$_REQUEST`裡面就不包含COOKIE提交來的了。
-而且這後面也把COOKIE循環出來 註冊變數
-所以這裡我們在COOKIE裡面提交GLOBALS 就不會被檢測出來了。
-而且也成功註冊了GLOBALS變數。
-所以在結合後面的一些些程式碼就造成了程式碼執行。
-例子: WooYun: Discuz!某兩個版本前台產品命令執行（無需登錄）
+<br />主要關鍵程式碼就上面這兩段。這裡把GET POST COOKIE 循環出來 然後註冊一個變數 但是 這裡不允許創建GLOBALS變數 然後DZ7.X 就是用這樣處理的 <br />如果設置了REQUEST 的 GLOBALS
+<br />就直接退出
+<br />這段程式碼在很久以前確實是沒什麼問題
+<br />因為那時候的request order 還是gpc
+<br />但是在php 5.3 以後 request order 默認成了gp
+<br />也就是成了get 和 Post 不包含cookie了。
+<br />
+<br />所以 `$_REQUEST`裡面就不包含COOKIE提交來的了。
+<br />而且這後面也把COOKIE循環出來 註冊變數
+<br />所以這裡我們在COOKIE裡面提交GLOBALS 就不會被檢測出來了。
+<br />而且也成功註冊了GLOBALS變數。
+<br />所以在結合後面的一些些程式碼就造成了程式碼執行。
+<br />例子: WooYun: Discuz!某兩個版本前台產品命令執行（無需登錄）
+<br />
