--- a/論PHP常見的漏洞/3. 0x03 注入.md
+++ b/論PHP常見的漏洞/3. 0x03 注入.md
@@ -344,7 +344,7 @@ $b=$_GET[b];
 Mysql_query("select * from table where xxx='$a' and xx='$b'")
 ```
 
-<br />如果這裡$_GET[a] 提交的是一個數組 且含有一個key為0的那麼$a就是對應的這個key的value
+<br />如果這裡`$_GET[a]` 提交的是一個數組 且含有一個key為0的那麼$a就是對應的這個key的value
 <br />但是這裡並沒有強制要求為數組。
 <br />那麼我們提交一個字符串 那麼後面的[0] 那麼就是截取的第一個字符
 <br />在全局中 單引號被轉義為\' 截取第一個字符就為了\
