--- a/論PHP常見的漏洞/1.1 WooYun-2014-62047：PHPSHE B2C 重裝.md
+++ b/論PHP常見的漏洞/1.1 WooYun-2014-62047：PHPSHE B2C 重裝.md
@@ -53,7 +53,7 @@ switch ($_g_step) {
 ```
 
 ### 漏洞證明
-![1.1-1.jpg](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/1.1/1.1-1.jpg)
+![1.1-1.jpg](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/1/1.1/1.1-1.jpg)
 
 沒有判斷lock 。 。可以直接重裝。
 輕鬆Getshell。
