--- a/論PHP常見的漏洞/3.15 WooYun-2014-80870：qibocms地方門戶系統注入.md
+++ b/論PHP常見的漏洞/3.15 WooYun-2014-80870：qibocms地方門戶系統注入.md
@@ -4,8 +4,8 @@
 ### 詳細說明
 在dianping/post.php中
 
-```php=131
-if($action=="postnew")
+```php
+ if($action=="postnew")
 
 {  
 
@@ -50,7 +50,7 @@ if($action=="postnew")
         @extract($db->get_one("SELECT COUNT(*) AS NUM FROM `{$_pre}content$_erp` WHERE list>'$timestamp' AND fid='$fid' AND city_id='$postdb[city_id]'"));
 ```
 
-```php=173
+```php
 @extract($db->get_one("SELECT COUNT(*) AS NUM FROM {$_pre}content$_erp WHERE list>'$timestamp' AND fid='$fid' AND city_id='$postdb[city_id]'"))
 ```
 這個語句。 `{$_pre}content$_erp` 來看看這個文件中的`$_erp`哪裡來的
