--- a/論PHP常見的漏洞/3.17 WooYun-2014-80259：齊博整站-地方門戶SQL注入漏洞.md
+++ b/論PHP常見的漏洞/3.17 WooYun-2014-80259：齊博整站-地方門戶SQL注入漏洞.md
@@ -45,11 +45,11 @@ $Limitword['安安你好']='安****好';
 ```
 
 $Limitword並沒有初值。而include有global $Limitword。
-齊博cms是將GET和POST變量註冊成全局變量了，所以global取到的可以是`$_POST[Limitword]`或`$_GET[Limitword]`。也就是說$Limitword是我們可以控制的。
+齊博cms是將GET和POST變數註冊成全局變數了，所以global取到的可以是`$_POST[Limitword]`或`$_GET[Limitword]`。也就是說$Limitword是我們可以控制的。
 
 我們可以控制str_replace函數的三個參數。
 
-某變量$str全局做過轉義，導致%00轉義成了\0.我們能夠控制str_replace的前兩個參數，則str_replace('0', '', $str)，再將0轉換成空，則留下了\，這個\可以轉義其後的\'，使之變成\'，導致單引號逃逸出轉義符的限制，造成注入。
+某變數$str全局做過轉義，導致%00轉義成了\0.我們能夠控制str_replace的前兩個參數，則str_replace('0', '', $str)，再將0轉換成空，則留下了\，這個\可以轉義其後的\'，使之變成\'，導致單引號逃逸出轉義符的限制，造成注入。
 
 
 ```php
@@ -90,7 +90,7 @@ function filtrate($msg){
 }
 ```
 
-將’等敏感字符過濾了。就算有一個\可以轉義一個'，但是這裡連'都引入不了。
+將'等敏感字符過濾了。就算有一個\可以轉義一個'，但是這裡連'都引入不了。
 執行的語句類似update table set a='111',b='222' where uid=1，我們引入一個\在111的最後，轉義掉111後面的引號，這樣222就逃逸出了限制，我們的sql注入語句就可以放在222的位置執行了。
 
 
@@ -100,7 +100,7 @@ function filtrate($msg){
 
 ![1](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/3/3.17/3.17-1.jpg)
 
-記下自己的uid，以便一會更新數據：
+記下自己的uid，以便一會更新資料：
 
 ![2](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/3/3.17/3.17-2.jpg)
 
@@ -110,7 +110,7 @@ function filtrate($msg){
 
 
 報錯了，說明注入是存在的。
-簡單構造一下，向http://localhost/qibov7/member/userinfo.php?job=edit&step=2發送數據包：
+簡單構造一下，向http://localhost/qibov7/member/userinfo.php?job=edit&step=2發送資料包：
 ```
 truename=xxxx%0000&Limitword[000]=&email=123@...&provinceid=,address=(select user()) where uid=38%23
 ```
