--- a/論PHP常見的漏洞/0x03-注入/3.19 WooYun-2014-70353：qibocms多個系統繞過補丁.md
+++ b/論PHP常見的漏洞/0x03-注入/3.19 WooYun-2014-70353：qibocms多個系統繞過補丁.md
@@ -41,7 +41,7 @@ function Add_S($array){
 }
 ```
 
-這裡把數組中的value addslashes 轉義了
+這裡把陣列中的value addslashes 轉義了
 但是沒有對key addslashes (這裡應該也不能做addslashes 因為會像上次那樣繞過)
 可以看到是把過濾key的代碼換了 之前是replace 可以繞過
 現在是 @eregi("['\\"&]+",$key) && die('ERROR KEY!');
@@ -92,7 +92,9 @@ function Add_S($array){
 ![2](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/3/3.19/3.19-2.jpg)
 
 可以看到提交.../yu.php?a[a'][asd]=a 的時候 那麼進入過濾函數的時候的key是asd
+<br />
 那麼就不會被匹配到 就不會被過濾了。
+<br />
 那麼我們不就是繞過了這個過濾了?
 
 
