--- a/論PHP常見的漏洞/0x03-注入/3.19 WooYun-2014-70353：qibocms多個系統繞過補丁.md
+++ b/論PHP常見的漏洞/0x03-注入/3.19 WooYun-2014-70353：qibocms多個系統繞過補丁.md
@@ -1,6 +1,6 @@
 ## WooYun-2014-70353：qibocms多個系統繞過補丁
 
-### 詳細說明
+## **詳細說明**
 qibocms的全局過濾函數
 
 ```php
@@ -147,6 +147,8 @@ foreach 出來的key沒有過濾 直接帶入到了查詢當中
 這樣進行檢測的key 是asd 但是 帶入查詢的 而是那段含單引號的key。
 造成了注入。
 
-### 漏洞證明
+---
+
+## **漏洞證明**
 
 ![5](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/3/3.19/3.19-4.jpg)
