--- a/論PHP常見的漏洞/0x03-注入/3.20 WooYun-2014-70366：qibocms全部開源系統 Getshell.md
+++ b/論PHP常見的漏洞/0x03-注入/3.20 WooYun-2014-70366：qibocms全部開源系統 Getshell.md
@@ -103,12 +103,21 @@ foreach($_GET AS $_key=>$_value){
 ```
 
 所以這變量`$label` 可以直接控制。
+<br />
 然後循環出來 陣列中的key 和 value 都直接寫入到了緩存文件中。
+<br />
 這裡由於value 全局的函數 會受到第一次轉義 `$value=addslashes($value);`
+<br />
 這裡又經過了第二次轉義 那麼就是a\\'
+<br />
 `"$label['$key']=stripslashes('$value');\r\n"`
+<br />
 寫入時候的代碼 就看有個stripslashes 其實是不會被執行的 而就是把stripslashes寫入到文件當中。
-這時候只有來利用key 由於在全局的過濾函數中沒對key做addslashes(也不能做addslashes) 所以不會被轉義 而且結合上面的 就直接繞過了。
+<br />
+這時候只有來利用key 由於在全局的過濾函數中沒對key做addslashes(也不能做addslashes) 所以不會被轉義 而且結合上面的 
+<br />
+就直接繞過了。
+<br />
 當寫入到文件中的時候是這樣的。
 
 ![3](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/3/3.20/3.20-3.jpg)
@@ -121,8 +130,11 @@ key中直接含單引號 被匹配到然後退出了。
 
 
 這時候寫入的代碼為 $label['asd'']=stripslashes('');
+<br />
 後面的stripslashes('') 為啥是空的了呢
+<br />
 如果不是空的還能利用轉義符來搞。
+<br />
 因為我們這樣提交index.php?label[asd'][asd]=asda' 這樣的那麼他的value是陣列
 
 
@@ -138,13 +150,21 @@ if(is_array($value))
 
 
 就清空了。
+<br />
 一開始我一直在糾結如果閉合之前的這個[ 我就需要提交一個yu']# 類似這樣的
+<br />
 可是寫入的是陣列中的key 如果要在key中寫入]的話 那麼就成了
+<br />
 `http://**.**.**.**/qibov7/index.php?label[asd']][asd]=asda'`
+<br />
 就成了[asd']] 這樣 那麼提交的] 和之前[ 閉合 然後key就還是asd'
+<br />
 然後就一直在這糾結這個問題。 。
+<br />
 後面問了問P神 尼瑪 瞬間給我解決。
+<br />
 P神給的`['a'."${phpinfo()}".'']` 利用雙引號的二次解析來Getshell
+<br />
 那麼就讓我們的key為a'."${phpinfo()}".' 這個就行了 不含]
 
 
@@ -155,13 +175,16 @@ P神給的`['a'."${phpinfo()}".'']` 利用雙引號的二次解析來Getshell
 ![7](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/3/3.20/3.20-7.jpg)
 
 報錯了 這裡我們用一下錯誤抑制符
+<br />
 那麼也就是`'a'."[[email protected]()}".'']` 提交的key為`a'."[email protected]()}".'`
 
 ![8](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/3/3.20/3.20-8.jpg)
 ![9](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/3/3.20/3.20-9.jpg)
 
 成功執行。
+<br />
 後面我再簡化了一下其實是不需要用到雙引號的二次解析的
+<br />
 `[''.phpinfo().'']` 提交的key為`'.phpinfo().'` 依舊可以直接執行
 
 ---
@@ -182,6 +205,7 @@ $FileName=ROOT_PATH."cache/label_cache/";
 ```
 
 首先目錄cache/label_cache/
+<br />
 再來看文件名
 ```php
 ".intval($ch)."".intval($chpagetype)."".intval($chmodule)."".intval($chfid)."".intval($cityid).''.substr(md5 (getTpl("index",$chdb[main_tpl])),0,5).".php"
@@ -192,8 +216,11 @@ $FileName=ROOT_PATH."cache/label_cache/";
 index_1_0_0_0_0_substr(md5(getTpl("index",$chdb[main_tpl])),0,5).php
 ```
 來看一下這個 `getTpl("index",$chdb[main_tpl])`
+<br />
 這個其實就是模版地址 網站的絕對路徑+默認模版地址
+<br />
 這裡用到了網站的絕對路徑 所以我們要找一個可以洩漏絕對路徑的。
+<br />
 會洩漏絕對路徑的地方很多 貼兩處
 ```
 http://**.**.**.**/data/label_hf.php
@@ -206,19 +233,29 @@ http://**.**.**.**//hack/gather/inc/show_system_fid.php
 ![10](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/3/3.20/3.20-10.jpg)
 
 `D:\ApmServ\www\htdocs\qibov7\data\label_hf.php`
+<br />
 那麼網站的絕對路徑就為 `D:\ApmServ\www\htdocs\qibov7`
+<br />
 再加上默認模版路徑`/template/default/index.htm`
+<br />
 那就是 `D:\ApmServ\www\htdocs\qibov7/template/default/index.htm`
+<br />
 對這個進行md5一次 得到`82e4a1041f04d2edb779e87b37623786`
+<br />
 然後他這裡是`substr(md5(getTpl("index",$chdb[main_tpl])),0,5)`取前5位
+<br />
 那麼就是82e4a 再拼湊起來
+<br />
 那麼就得到 `cache/label_cache/index_1_0_0_0_0_82e4a.php`
 
 ![11](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/3/3.20/3.20-11.jpg)
 
 找文件的第二種方法
+<br />
 在`windows iis`下可以利用短文件名來猜解
+<br />
 如果`windows apache`的話 那就更簡單了
+<br />
 直接`cache/labelcache/index~1.php`
 
 
