--- a/論PHP常見的漏洞/0x03-注入/3.29 WooYun-2014-79045：Supesite 前台注入 #3.md
+++ b/論PHP常見的漏洞/0x03-注入/3.29 WooYun-2014-79045：Supesite 前台注入 #3.md
@@ -162,12 +162,12 @@ $query = $_SGLOBAL['db']->query('SELECT * FROM '.tname('spacetags').' WHERE item
 ![1](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/3/3.29/3.29-1.jpg)
 
 投稿 這裡tag 隨便寫一個
---------+-------+------------+------+--------+
+<br />
+
 | itemid | tagid | dateline | type | status |
-+--------+-------+------------+------+--------+
 | 3 | 1 | 1412680532 | news | 0 |
 | 4 | 2 | 1412680930 | news | 0 |
-數據庫裡也就創建了。 。
+資料庫裡也就創建了。 。
 
 這裡的itemid 在
 ```
@@ -175,6 +175,7 @@ $query = $_SGLOBAL['db']->query('SELECT * FROM '.tname('spacetags').' WHERE item
 ```
 
 地址中就能看到為4
+<br />
 然後在
 ```php
 $query = $_SGLOBAL['db']->query('SELECT * FROM '.tname('spacetags').' WHERE itemid=\''.$itemid.'\' AND status=\''. $status.'\'');
