--- a/論PHP常見的漏洞/0x03-注入/3.32 WooYun-2014-68362：74cms (20140709) 二枚二次注入.md
+++ b/論PHP常見的漏洞/0x03-注入/3.32 WooYun-2014-68362：74cms (20140709) 二枚二次注入.md
@@ -7,9 +7,9 @@
 首先註冊一個企業會員 然後創建企業
 ![1](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/3/3.32/3.32-1.jpg)
 
-單引號會被轉義 然後轉義入庫。
+單引號會被轉義 然後轉義輸入。
 <br />
-找找出庫的地方。
+找找輸出的地方。
 <br />
 然後創建好企業後 發布招聘 如下。
 
@@ -22,11 +22,11 @@
 
 點擊發布後 可以看到報錯了。
 <br />
-這裡剛才的企業名出庫了 而且帶入到了查詢當中。
+這裡剛才的企業名輸出了 而且帶入到了查詢當中。
 <br />
-這裡稍微構造下還是能出數據。
+這裡稍微構造下還是能出資料。
 <br />
-這個數據就不多說了, 第二處再來說說出數據。
+這個資料就不多說了, 第二處再來說說出資料。
 
 
 ---
@@ -36,7 +36,7 @@
 <br />
 然後發布簡歷。
 <br />
-來看代碼
+來看程式碼
 
 ```php
 elseif ($act=='make4_save')
@@ -74,11 +74,11 @@ elseif ($act=='make4_save')
 ```php
 inserttable(table('resume_education')
 ```
-這裡把post來的數據帶入到了insert當中 入庫。
+這裡把post來的資料帶入到了insert當中 輸入。
 <br />
 這裡我們提交一個單引號 然後帶入insert的時候雖然是轉義
 <br />
-但是入庫後會消除轉義符。
+但是輸入後會消除轉義符。
 <br />
 然後繼續看 check_resume
 
@@ -196,7 +196,7 @@ function check_resume($uid,$pid)
 ```php
 resume_education=get_resume_education($uid,$pid);
 ```
-這裡把剛才入庫的查詢了出來 所以單引號就出來了。 往下看
+這裡把剛才輸入的查詢了出來 所以單引號就出來了。 往下看
 
 
 ```php
@@ -231,7 +231,7 @@ $setsqlarr['key']=$resume_basic['intention_jobs'].$resume_basic['recentjobs'].$r
     updatetable(table('resume_tmp'),$setsqlarr,"uid='{$uid}' AND id='{$pid}'");
 ```
 
-然後把出庫來的給一數組 然後帶入到了update中。
+然後把輸出來的給一陣列 然後帶入到了update中。
 <br />
 造成了注入。而且這個update 可以控制的點是在set位置的
 <br />
@@ -244,7 +244,7 @@ $setsqlarr['key']=$resume_basic['intention_jobs'].$resume_basic['recentjobs'].$r
 
 報錯了 稍微構造一下。
 <br />
-這裡我們把address updata成要出的數據
+這裡我們把address updata成要出的資料
 
 ![6](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/3/3.32/3.32-6.jpg)
 
@@ -253,7 +253,7 @@ $setsqlarr['key']=$resume_basic['intention_jobs'].$resume_basic['recentjobs'].$r
 ![7](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/3/3.32/3.32-7.jpg)
 
 
-成功了對關鍵字的過濾出數據。
+成功了對關鍵字的過濾出資料。
 
 <br />
 
