--- a/論PHP常見的漏洞/0x03-注入/3.32 WooYun-2014-68362：74cms (20140709) 二枚二次注入.md
+++ b/論PHP常見的漏洞/0x03-注入/3.32 WooYun-2014-68362：74cms (20140709) 二枚二次注入.md
@@ -43,33 +43,33 @@ elseif ($act=='make4_save')
 
 {
 
-    $resume_education=get_resume_education($_SESSION['uid'],$_REQUEST['pid']);
+    $resume_education=get_resume_education($_SESSION['uid'],$_REQUEST['pid']);
 
-    if (count($resume_education)>=6) showmsg('教育经历不能超过6条！',1,$link);
+    if (count($resume_education)>=6) showmsg('教育經歷不能超過6條！',1,$link);
 
-    $setsqlarr['uid']=intval($_SESSION['uid']);
+    $setsqlarr['uid']=intval($_SESSION['uid']);
 
-    $setsqlarr['pid']=intval($_REQUEST['pid']);
+    $setsqlarr['pid']=intval($_REQUEST['pid']);
 
-    if ($setsqlarr['uid']==0 || $setsqlarr['pid']==0 ) showmsg('参数错误！',1);
+    if ($setsqlarr['uid']==0 || $setsqlarr['pid']==0 ) showmsg('參數錯誤！',1);
 
-    $setsqlarr['start']=trim($_POST['start'])?$_POST['start']:showmsg('请填写开始时间！',1,$link);
+    $setsqlarr['start']=trim($_POST['start'])?$_POST['start']:showmsg('請填寫開始時間！',1,$link);
 
-    $setsqlarr['endtime']=trim($_POST['endtime'])?$_POST['endtime']:showmsg('请填写结束时间！',1,$link);
+    $setsqlarr['endtime']=trim($_POST['endtime'])?$_POST['endtime']:showmsg('請填寫結束時間！',1,$link);
 
-    $setsqlarr['school']=trim($_POST['school'])?$_POST['school']:showmsg('请填写学校名称！',1,$link);
+    $setsqlarr['school']=trim($_POST['school'])?$_POST['school']:showmsg('請填寫學校名稱！',1,$link);
 
-    $setsqlarr['speciality']=trim($_POST['speciality'])?$_POST['speciality']:showmsg('请填写专业名称！',1,$link);
+    $setsqlarr['speciality']=trim($_POST['speciality'])?$_POST['speciality']:showmsg('請填寫專業名稱！',1,$link);
 
-    $setsqlarr['education']=trim($_POST['education'])?$_POST['education']:showmsg('请选择获得学历！',1,$link);
+    $setsqlarr['education']=trim($_POST['education'])?$_POST['education']:showmsg('請選擇獲得學歷！',1,$link);
 
-    $setsqlarr['education_cn']=trim($_POST['education_cn'])?$_POST['education_cn']:showmsg('请选择获得学历！',1,$link);
+    $setsqlarr['education_cn']=trim($_POST['education_cn'])?$_POST['education_cn']:showmsg('請選擇獲得學歷！',1,$link);
 
-        if (inserttable(table('resume_education'),$setsqlarr))
+        if (inserttable(table('resume_education'),$setsqlarr))
 
-        {
+        {
 
-            check_resume($_SESSION['uid'],intval($_REQUEST['pid']));
+            check_resume($_SESSION['uid'],intval($_REQUEST['pid']));
 ```
 ```php
 inserttable(table('resume_education')
